Fix gap at img-pernik

--- a/css/custom.css
+++ b/css/custom.css
@@ -154,7 +154,7 @@ html {
   }
 
   .img-goaBawah {
-    top: 55rem !important;
+    top: 57rem !important;
   }
 }
 
@@ -169,7 +169,7 @@ html {
     font-size: 1.4rem;
   }
   .img-pernik2 {
-    right: -4.9rem !important;
+    right: -4.8rem !important;
     height: 709px !important;
   }
   .text-section {
@@ -185,6 +185,7 @@ html {
     gap: 2rem !important;
   }
   .img-goaBawah {
+    top: 62rem !important;
     bottom: 0rem !important;
   }
   .img-artList {
